--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# vids
+public/videos/video1.mp4
+public/videos/video2.mp4
+public/videos/video3.mp4
